--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
 
 
 
-        <div class="row top navbar-fixed-top">
+        <div class="row top navbar-fixed-top navbar-collapse">
           <div class="container-fluid">
             <div class="col-md-1">
               <a href="#top"><h2 class="logo"> C<span class="blue">.</span></h2></a>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 nav">
             </div>
 
-            <div class="col-md-2 col-sm-hidden">
+            <div class="col-md-2 col-sm-hidden nav">
               <a href="#real"><h2 class="link nav"> réalisations<span class="blue">.</span> </h2></a>
             </div>
-            <div class="col-md-2 col-sm-hidden">
+            <div class="col-md-2 col-sm-hidden nav">
               <a href="#skills"><h2 class="link nav"> Compétences<span class="blue">.</span> </h2></a>
             </div>
-            <div class="col-md-2 col-sm-hidden">
+            <div class="col-md-2 col-sm-hidden nav">
               <a href="#contact"><h2 class="link nav"> Infos<span class="blue">.</span> </h2></a>
             </div>
 
@@ -101,7 +101,7 @@
                   <h3>Portail de la Sécurité Informatique - Michelin</h3>
                   <hr/>
                   <p>Je travail sur la création d'un portail de la sécurité informatique sur l'intranet de l'entreprise Michelin, ma démarche est de partir de l'utilisateur pour créer un portail qui réponde à ses attentes</p>
-                  <a href="http://www.congres-national-apiculture.com/" class="projectlink">En savoir plus <span class="blue">.</span>  </a>
+                <!--  <a href="http://www.congres-national-apiculture.com/" class="projectlink">En savoir plus <span class="blue">.</span>  </a> -->
                 </div>
                 <div class="col-md-6">
                   <img src="images/portail.jpg"  alt="colin beal michelin" class="img-responsive">
@@ -114,12 +114,12 @@
                   <h3>Application web pour le site des arts d'asie et d'afrique</h3>
                   <hr/>
                   <p>J'ai créer cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. </p>
-                  <a href="https://colinbeal.github.io/" class="projectlink">Découvrir le site<span class="blue">.</span>   </a>
+                  <!--<a href="https://colinbeal.github.io/" class="projectlink">Découvrir le site<span class="blue">.</span>   </a>-->
                 </div>
                 <div class="col-md-6">
                   <img src="images/11.jpg" alt="colin beal puzzle" class="img-responsive">
                 </div>
-
+    </div>
 
               <div class="row real">
                 <div class="col-md-6">
@@ -130,11 +130,11 @@
                   <a href="http://www.congres-national-apiculture.com/" class="projectlink">Découvrir le site <span class="blue">.</span>  </a>
                 </div>
                 <div class="col-md-6">
-                  <img src="images/4.jpg"  alt="colin beal apiculture" class="img-responsive">
+                  <img src="images/4.png"  alt="colin beal apiculture" class="img-responsive">
                 </div>
 
               </div>
-            </div>
+
             <div class="row real">
 
                 <div class="col-md-6">
@@ -153,11 +153,37 @@
                     <div class="container aprop" id="skills">
 
                         <h2> Compétences<span class="blue">.</span> </h2>
-
+                            <div class="row">
+                                <div class="col-md-1">
+                                </div>
+                              <div class="col-md-4">
+                                <h3> Languages Web </h3>
+                                
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> HTML </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> CSS </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Javascript </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> MySQL </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> PHP </p>
+                              </div>
+                              <div class="col-md-3">
+                                <h3> Framework </h3>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Jquery </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Bootstrap  </p>
+                              </div>
+                              <div class="col-md-3">
+                                <h3> Logiciels </h3>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Adobe Photoshop </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Adobe XD </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Adobe Illustrator </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Atom </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Github </p>
+                              </div>
+                            </div>
                     </div>
-                    <div class="container aprop" id="skills">
+                    <div class="container aprop" id="Infos">
 
                         <h2> Infos<span class="blue">.</span> </h2>
+
 
                     </div>
 
