--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <a href="#skills"><h2 class="link nav"> Compétences<span class="blue">.</span> </h2></a>
             </div>
             <div class="col-md-2 col-sm-hidden nav">
-              <a href="#contact"><h2 class="link nav"> Infos<span class="blue">.</span> </h2></a>
+              <a href="#contact"><h2 class="link nav"> À propos<span class="blue">.</span> </h2></a>
             </div>
 
           </div>
@@ -158,7 +158,7 @@
                                 </div>
                               <div class="col-md-4">
                                 <h3> Languages Web </h3>
-                                
+
                                   <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> HTML </p>
                                   <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> CSS </p>
                                   <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Javascript </p>
@@ -182,9 +182,14 @@
                     </div>
                     <div class="container aprop" id="Infos">
 
-                        <h2> Infos<span class="blue">.</span> </h2>
-
-
+                        <h2> À propos<span class="blue">.</span> </h2>
+                            <p>   Je suis étudiant en deuxième année de DUT MMI (Métiers du Multimédia et de l'Internet) en stage de fin d'étude chez Michelin.
+                              Cette formation m'a permis d'approfondir mes connaissances en développement Web mais aussi de découvrir l'infographie,
+                               l'audiovisuel, la communication et le marketing. Des domaine qui permette d'avoir une vision plus large d'un projet lorsque l'on est développeur web.
+                            </p>
+                            <p>Pour toutes informations supplémentaires vous pouvez consultez mes travaux sur github
+                            </br>  à l'adresse suivante : <a href="https://github.com/ColinBeal" class="hyperlink">https://github.com/ColinBeal</a></p>
+                            <p>  Ou tout simplement m'envoyer un mail à : <A HREF="mailto:colinbealwork@gmail.com" class="hyperlink">colinbealwork@gmail.com</A></p>
                     </div>
 
           <footer>
