--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                             </p>
                             <p>Pour toutes informations supplémentaires vous pouvez consultez mes travaux sur github
                             </br>  à l'adresse suivante : <a href="https://github.com/ColinBeal" class="hyperlink">https://github.com/ColinBeal</a></p>
-                            <p>  Ou tout simplement m'envoyer un mail à : <A HREF="mailto:colinbealwork@gmail.com" class="hyperlink">colinbealwork@gmail.com</A></p>
+                            <p>  Ou tout simplement m'envoyer un mail à : <a href="mailto:colinbealwork@gmail.com" class="hyperlink">colinbealwork@gmail.com</a></p>
                     </div>
 
           <footer>
