--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
                         <h2> À propos<span class="blue">.</span> </h2>
                             <p>   Je suis étudiant en deuxième année de DUT MMI (Métiers du Multimédia et de l'Internet) en stage de fin d'étude chez Michelin.
                               Cette formation m'a permis d'approfondir mes connaissances en développement Web mais aussi de découvrir l'infographie,
-                               l'audiovisuel, la communication et le marketing. Des domaine qui permette d'avoir une vision plus large d'un projet lorsque l'on est développeur web.
+                               l'audiovisuel, la communication et le marketing. Des domaines qui permettent d'avoir une vision plus large d'un projet lorsque l'on est développeur.
                             </p>
-                            <p>Pour toutes informations supplémentaires vous pouvez consultez mes travaux sur github
+                            <p>Pour toutes informations complémentaires vous pouvez consultez ma page sur github
                             </br>  à l'adresse suivante : <a href="https://github.com/ColinBeal" class="hyperlink">https://github.com/ColinBeal</a></p>
                             <p>  Ou tout simplement m'envoyer un mail à : <a href="mailto:colinbealwork@gmail.com" class="hyperlink">colinbealwork@gmail.com</a></p>
                     </div>
