--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="col-md-7">
 
                   <h1 class="maintext5">
-                      Je m'appelle <span class="blue">Colin Beal</span> & je créer sur les internets depuis 2015. Je suis actuellement en stage chez Michelin.
+                      Je m'appelle <span class="blue">Colin Beal</span> & je crée sur les internets depuis 2015. Je suis actuellement en stage chez Michelin.
                        <br/>
                        <br/>
                        Bonne visite<span class="blue">.</span>
@@ -113,7 +113,7 @@
                   <p class="date">Projet Etude | Décembre 2016</p>
                   <h3>Application web pour le site des arts d'asie et d'afrique</h3>
                   <hr/>
-                  <p>J'ai créer cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. </p>
+                  <p>J'ai crée cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. </p>
                   <!--<a href="https://colinbeal.github.io/" class="projectlink">Découvrir le site<span class="blue">.</span>   </a>-->
                 </div>
                 <div class="col-md-6">
