--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                               </div>
                             </div>
                     </div>
-                    <div class="container aprop" id="Infos">
+                    <div class="container aprop" id="contact">
 
                         <h2> À propos<span class="blue">.</span> </h2>
                             <p>   Je suis étudiant en deuxième année de DUT MMI (Métiers du Multimédia et de l'Internet) en stage de fin d'étude chez Michelin.
