--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
               <div class="row">
                 <h2 id="real" class="col-md-4">Réalisations<span class="blue">.</span> </h2>
               </div>
+
               <div class="row real">
                 <div class="col-md-6">
                   <p class="date">Stage | En cours (04/17-06/17)</p>
@@ -191,9 +192,14 @@
                             </br>  à l'adresse suivante : <a href="https://github.com/ColinBeal" class="hyperlink">https://github.com/ColinBeal</a></p>
                             <p>  Ou tout simplement m'envoyer un mail à : <a href="mailto:colinbealwork@gmail.com" class="hyperlink">colinbealwork@gmail.com</a></p>
                     </div>
-
+<hr/>
           <footer>
+          <div class="row">
+                <div class="col-md-4">
+                  </div>
+                  <p class="col-md-4">Créer par: Colin Beal | 2017 | Développeur Web</p>
 
+          </div>
           </footer>
           <script src="js/jquery.js"></script>
           <script src="js/bootstrap.min.js"></script>
