--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
 
-        <div class="row top navbar-fixed-top navbar-collapse">
+        <div class="row top  navbar-collapse">
           <div class="container-fluid">
             <div class="col-md-1">
               <a href="#top"><h2 class="logo"> C<span class="blue">.</span></h2></a>
@@ -197,7 +197,7 @@
           <div class="row">
                 <div class="col-md-4">
                   </div>
-                  <p class="col-md-4">Créer par: Colin Beal | 2017 | Développeur Web</p>
+                  <p class="col-md-4">Créé par: Colin Beal | 2017 | Développeur Web</p>
 
           </div>
           </footer>
