--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Bonjour, je m'appel Colin Beal et je créer des sites sur les internets depuis 2015."/>
+    <meta name="description" content="  Je m'appelle & je crée sur les internets depuis 2015. Je suis actuellement en Licence Professionnelle Métiers de l'Internet."/>
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <title>Colin BEAL | Développeur Web | Clermont-Ferrand</title>
@@ -48,7 +48,7 @@
 
 
 
-        <div class="row top  navbar-collapse">
+        <div class="row top  navbar-collapse hidden-sm hidden-xs">
           <div class="container-fluid">
             <div class="col-md-1">
               <a href="#top"><h2 class="logo"> C<span class="blue">.</span></h2></a>
@@ -57,7 +57,7 @@
             </div>
 
             <div class="col-md-2 col-sm-hidden nav">
-              <a href="#real"><h2 class="link nav"> réalisations<span class="blue">.</span> </h2></a>
+              <a href="#real"><h2 class="link nav"> Réalisations<span class="blue">.</span> </h2></a>
             </div>
             <div class="col-md-2 col-sm-hidden nav">
               <a href="#skills"><h2 class="link nav"> Compétences<span class="blue">.</span> </h2></a>
@@ -77,8 +77,9 @@
                 <div class="col-md-7">
 
                   <h1 class="maintext5">
-                      Je m'appelle <span class="blue">Colin Beal</span> & je crée sur les internets depuis 2015. Je suis actuellement en stage chez Michelin.
+                      Je m'appelle <span class="blue">Colin Beal</span> & je crée sur les internets depuis 2015. Je suis actuellement en Licence Professionnelle Métiers de l'Internet.
                        <br/>
+                       En recherche de stage en tant que développeur Web
                        <br/>
                        Bonne visite<span class="blue">.</span>
                   </h1>
@@ -98,11 +99,11 @@
 
               <div class="row real">
                 <div class="col-md-6">
-                  <p class="date">Stage | En cours (04/17-06/17)</p>
+                  <p class="date">Stage | Avril 2017</p>
                   <h3>Portail de la Sécurité Informatique - Michelin</h3>
                   <hr/>
-                  <p>Je travail sur la création d'un portail de la sécurité informatique sur l'intranet de l'entreprise Michelin, ma démarche est de partir de l'utilisateur pour créer un portail qui réponde à ses attentes</p>
-                <!--  <a href="http://www.congres-national-apiculture.com/" class="projectlink">En savoir plus <span class="blue">.</span>  </a> -->
+                  <p>Lors de mon stage de fin de DUT j'ai créé d'un portail de la sécurité informatique sur l'intranet de l'entreprise Michelin, ma démarche a été de partir de l'utilisateur pour créer un portail qui réponde à ses attentes</p>
+                 <a href="https://xd.adobe.com/view/bad750dc-cef9-4f3c-8b05-2de232de9ddd/" class="projectlink">Visionner la maquette <span class="blue">.</span>  </a> -->
                 </div>
                 <div class="col-md-6">
                   <img src="images/portail.jpg"  alt="colin beal michelin" class="img-responsive">
@@ -163,8 +164,9 @@
                                   <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> HTML </p>
                                   <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> CSS </p>
                                   <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Javascript </p>
-                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> MySQL </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> MySQL/Oracle </p>
                                   <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> PHP </p>
+                                  <p>  <i class="fa fa-circle" style="font-size:10px;" aria-hidden="true"></i> Java </p>
                               </div>
                               <div class="col-md-3">
                                 <h3> Framework </h3>
@@ -184,9 +186,10 @@
                     <div class="container aprop" id="contact">
 
                         <h2> À propos<span class="blue">.</span> </h2>
-                            <p>   Je suis étudiant en deuxième année de DUT MMI (Métiers du Multimédia et de l'Internet) en stage de fin d'étude chez Michelin.
-                              Cette formation m'a permis d'approfondir mes connaissances en développement Web mais aussi de découvrir l'infographie,
-                               l'audiovisuel, la communication et le marketing. Des domaines qui permettent d'avoir une vision plus large d'un projet lorsque l'on est développeur.
+                            <p>   Je suis étudiant en Licence Professionnelle Métiers de l'internet à Dijon qui me permet d'approfondir mes compétences en Développement Web. Avant cette licence, j'ai effectué
+                              un DUT MMI (Métiers du Multimédia et de l'Internet) .
+                              Cette formation m'a permis de faire mes premiers pas dans le développement Web mais aussi d'être formé en infographie,
+                               audiovisuel, communication et  marketing. Des domaines qui permettent d'avoir une vision plus large d'un projet lorsque l'on est développeur.
                             </p>
                             <p>Pour toutes informations complémentaires vous pouvez consultez ma page sur github
                             </br>  à l'adresse suivante : <a href="https://github.com/ColinBeal" class="hyperlink">https://github.com/ColinBeal</a></p>
@@ -197,7 +200,7 @@
           <div class="row">
                 <div class="col-md-4">
                   </div>
-                  <p class="col-md-4">Créé par: Colin Beal | 2017 | Développeur Web</p>
+                  <p class="col-md-4">Créé par: Colin Beal | 2018 | Développeur Web</p>
 
           </div>
           </footer>
