--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="  Je m'appelle & je crée sur les internets depuis 2015. Je suis actuellement en Licence Professionnelle Métiers de l'Internet."/>
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
-    <title>Colin BEAL | Développeur Web | Clermont-Ferrand</title>
+    <title>Colin BEAL | Développeur Web | Dijon</title>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900|Domine:400,700" rel="stylesheet">
       <!-- Bootstrap -->
@@ -48,7 +48,7 @@
 
 
 
-        <div class="row top  navbar-collapse hidden-sm hidden-xs">
+        <div class="row top  navbar-collapse">
           <div class="container-fluid">
             <div class="col-md-1">
               <a href="#top"><h2 class="logo"> C<span class="blue">.</span></h2></a>
@@ -56,13 +56,13 @@
             <div class="col-md-5 nav">
             </div>
 
-            <div class="col-md-2 col-sm-hidden nav">
+            <div class="col-md-2 col-sm-hidden col-xs-hidden nav">
               <a href="#real"><h2 class="link nav"> Réalisations<span class="blue">.</span> </h2></a>
             </div>
-            <div class="col-md-2 col-sm-hidden nav">
+            <div class="col-md-2 col-sm-hidden col-xs-hidden nav">
               <a href="#skills"><h2 class="link nav"> Compétences<span class="blue">.</span> </h2></a>
             </div>
-            <div class="col-md-2 col-sm-hidden nav">
+            <div class="col-md-2 col-sm-hidden col-xs-hidden nav">
               <a href="#contact"><h2 class="link nav"> À propos<span class="blue">.</span> </h2></a>
             </div>
 
@@ -79,7 +79,6 @@
                   <h1 class="maintext5">
                       Je m'appelle <span class="blue">Colin Beal</span> & je crée sur les internets depuis 2015. Je suis actuellement en Licence Professionnelle Métiers de l'Internet.
                        <br/>
-                       En recherche de stage en tant que développeur Web
                        <br/>
                        Bonne visite<span class="blue">.</span>
                   </h1>
@@ -87,9 +86,7 @@
                 <div class="discover">
                   <a href="#real"><i class="fa fa-arrow-down fa-2x"></i></a>
                 </div>
-          <!--  <div class="col-md-5 ">
-          <img src="images/photo.png" alt="photo colin developpeur web" class="img-responsive profil" >
-        </div> -->
+      
               </div>
             </div>
             <div class="container aprop">
